frontend: handle 0 amount bolt11 invoices
This handles the case where the bolt11 invoice scanned has either a 0 or null invoice amount, in which case the user needs to enter an amount to send

--- a/frontends/web/src/locales/en/app.json
+++ b/frontends/web/src/locales/en/app.json
@@ -1098,6 +1098,10 @@
       "title": "Receive Lightning"
     },
     "send": {
+      "amountSats": {
+        "label": "Sats",
+        "placeholder": "Enter amount"
+      },
       "confirm": {
         "amount": "Amount",
         "memo": "Memo",
